[tool.poetry]
name = "luna"
version = "0.1.9"
description = "Luna - Advanced Discord Administration Bot"
authors = ["s12kuma01"]
readme = "README.md"
packages = [{include = "luna"}]

[tool.poetry.dependencies]
python = "^3.13"
discord-py = "^2.4.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
sqlmodel = "^0.0.22"
aiosqlite = "^0.20.0"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"
toml = "^0.10.2"
psutil = "^6.1.0"
dependency-injector = "^4.42.0"
pillow = "^11.0.0"
aiohttp = "^3.11.10"
yt-dlp = "^2024.12.13"
pynacl = "^1.5.0"
spotipy = "^2.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.14.1"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
target-version = "py313"
line-length = 88
extend-select = ["E", "W", "F", "I", "N", "B", "A", "C4", "UP", "YTT"]

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
strict = false
ignore_missing_imports = true

[tool.pylance]
typeCheckingMode = "basic"
# basic: 基本的な型チェック
# off: 型チェック無効
# strict: 厳格な型チェック